gccida/c2/xexit
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/xexit/src/xexit.c:509:6: error: use of undeclared identifier 'xexit_cleanup'; did you mean '_xexit_cleanup'?
if ( xexit_cleanup ) 
     ^~~~~~~~~~~~~
     _xexit_cleanup
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/xexit/src/xexit.c:42:8: note: '_xexit_cleanup' declared here
void (*_xexit_cleanup) PARAMS ((void));
       ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/xexit/src/obj/xexit.o] Error 1
